--- a/package.json
+++ b/package.json
@@ -1,26 +1,73 @@
 {
   "name": "inventory-system",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Inventory Management System for Robotics Lab, AI Research Centre, and Metaverse Lab at Woxsen University",
+  "author": "Woxsen University",
+  "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/woxsen-university/inventory-system"
+  },
+  "keywords": [
+    "inventory",
+    "management",
+    "nextjs",
+    "typescript",
+    "prisma",
+    "postgresql"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js",
+    "db:reset": "prisma migrate reset",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "@hookform/resolvers": "^3.9.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.2.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
+    "exceljs": "^4.4.0",
+    "next": "^15.5.9",
+    "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.15.1",
+    "nodemailer": "^6.9.16",
+    "qrcode": "^1.5.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22",
+    "@types/nodemailer": "^6.4.21",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.1.3",
+    "postcss": "^8",
+    "prisma": "^6.2.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
