--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -10,7 +10,6 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          # We add the username and token to the URL for a smoother handshake
-          target_repo_url: https://github.com/inventory-wou/inventory.git
-          target_username: inventory-wou
-          target_token: ${{ secrets.SYNC_TOKEN }}
+          # We embed the token directly into the URL string here
+          target_repo_url: https://x-access-token:${{ secrets.SYNC_TOKEN }}@github.com/inventory-wou/inventory.git
+          ssh_username: inventory-wou
