Update: GIT Sync

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -10,7 +10,4 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          # Using a > allows us to put the long URL on its own clean line
-          target_repo_url: >-
-            https://x-access-token:${{secrets.SYNC_TOKEN}}@github.com/inventory-wou/inventory.git
-          ssh_username: inventory-wou
+          target_repo_url: https://x-access-token:${{secrets.SYNC_TOKEN}}@github.com/inventory-wou/inventory.git
