--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -5,9 +5,14 @@ jobs:
   git-mirror:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout source repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url: https://x-access-token:${{secrets.SYNC_TOKEN}}@github.com/inventory-wou/inventory.git
+      
+      - name: Mirror to target repository
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git remote add mirror https://x-access-token:${{ secrets.SYNC_TOKEN }}@github.com/inventory-wou/inventory.git
+          git push mirror --mirror --force
