--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -20,8 +20,10 @@ jobs:
           fi
       
       - name: Mirror to target repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.SYNC_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-          git remote add mirror https://x-access-token:${{ secrets.SYNC_TOKEN }}@github.com/inventory-wou/inventory.git
+          git remote add mirror https://inventory-wou:${GITHUB_TOKEN}@github.com/inventory-wou/inventory.git
           git push mirror --mirror --force
