--- a/.github/workflows/mirror-ssh.yml
+++ b/.github/workflows/mirror-ssh.yml
@@ -22,4 +22,5 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           git remote add mirror git@github.com:inventory-wou/inventory.git
-          git push mirror --mirror --force
+          git push mirror --all --force
+          git push mirror --tags --force
