--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "adm-zip": "^0.5.16",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "csv-parse": "^6.1.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/csv-parse": "^1.1.12",
     "@types/node": "^22",
